Prepare 3.1 release with Java 8 compatibility